Java 9 compatibility without suppressions for deprecated elements Restored previously suppressed warnings. Formatting fixes.